--- a/css/Style.css
+++ b/css/Style.css
@@ -10,6 +10,13 @@ body {
     overflow-y: auto;
 }
 
+.background-imagen {
+    background-image: url('img/ImgForm.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
+
 .form-container {
     background-color: rgba(255, 255, 255, 0.7);
     border-radius: 8px;
