--- a/css/Style.css
+++ b/css/Style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -12,9 +17,14 @@ body {
 
 .background-imagen {
     background-image: url('img/ImgForm.jpeg');
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
 }
 
 .form-container {
@@ -36,7 +46,7 @@ body {
     margin-bottom: 10px;
 }
 
-.form-header p {
+.form-header h3 {
     font-size: 14px;
     color: #605e5c;
     line-height: 1.5;
@@ -47,6 +57,17 @@ body {
     color: #a4262c;
     font-weight: normal;
     margin-left: 2px;
+}
+
+.checkboxError {
+    color: #a4262c;
+    font-weight: normal;
+    margin-left: 2px;
+    display: none;
+}
+
+.form-group {
+    padding-bottom: 25px;
 }
 
 .form-group label,
@@ -63,7 +84,6 @@ input[type="text"] {
     padding: 10px;
     border-width: 0px 0px 0.125rem;
     border-radius: 0.25rem;
-    boder-bottom-style: solid;
     border-bottom-color: transparent;
     font-size: 1rem;
     color: #323130;
@@ -165,6 +185,39 @@ input[type="checkbox"]:focus {
     font-size: 12px;
     color: #605e5c;
     margin: 0;
+}
+
+.page-container h1, .page-container p {
+    background-color: #03787C;
+    color: white;
+    box-shadow: 0 0 7px 4px #03787C;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.page-container h1 {
+    text-align: center;
+}
+.page-container button {
+    color: #03787C;
+    background-color: white;
+    border-style: none;
+    padding: 12px;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-radius: 5px;
+}
+
+.mensajeExito {
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #03787C;
+    background-color: #e8f5e9;
+    border-radius: 8px;
+}
+
+.mensajeExito h2 {
+    color: #03787C;
 }
 
 @media (max-width: 600px) {
